# rjg

./: .gitignore  pyproject.toml  readme.md
build_scripts/: Bobo_Build_Scripts.py  Domingo_Misc.py  Gretchen_misc.py  Luciana_Misc.py  Sharkguy_Build_Scripts.py  Susaka_Misc.py  UEPoseImport.py  bobo_misc.py  build.py  build_ui.py  dm_bone_dict.py  rig_publish.py  sk_bone_dict.py  utils.py
build_scripts/SteveUtils/: Asset_publish.py  BoboPublish.py  BuildControls.py  CurveNetAtHome.py  DefaultPropSetUp.py  GuideExport_util.py  IrisScale.py  NewBoboPublish.py  OLD_UEmodulePeices.py  Place_at_Vertex.py  RibbonUtilsMenu.py  ShotGrid_RigPublish.py  SpaceSwitch.py  StuntFlowerSripts.py  Truck_Build.py  dot_eye_build.py  doubleSkinClusters.py  guide_flip.py  hair_guide_split.py  importskins.py  misc  random_selection.py  scratch_paper.py
libs/: attribute.py  node.py  shotSculpt.py  softMod.py  transform.py  util.py
libs/control/: ctrl.py
libs/control/shapes/: ZTArrows  ZTarrow  ZTgear  ZTpoint  ZTsphere
libs/maya_api/: attribute.py  node.py
libs/spline/: __init__.py  math.py  matrix_spline.py  maya_query.py
post/: BobofaceProject.py  faceProject.py  finalize.py  unrealJntRename.py
